src/assets/styles/_variables.scss
// ---------- FONTS ----------
$primary-font-stack:
    'ClashDisplay',
    -apple-system,
    blinkmacsystemfont,
    'Segoe UI',
    roboto,
    'Helvetica Neue',
    arial,
    sans-serif,
    'Apple Color Emoji',
    'Segoe UI Emoji',
    'Segoe UI Symbol';
$secondary-font-stack:
    inter,
    'Poppins',
    -apple-system,
    blinkmacsystemfont,
    'Segoe UI',
    roboto,
    'Helvetica Neue',
    arial,
    sans-serif,
    'Apple Color Emoji',
    'Segoe UI Emoji',
    'Segoe UI Symbol';
$ternary-font-stack:
    'Spartan',
    -apple-system,
    blinkmacsystemfont,
    'Segoe UI',
    roboto,
    'Helvetica Neue',
    arial,
    sans-serif,
    'Apple Color Emoji',
    'Segoe UI Emoji',
    'Segoe UI Symbol';

// ---------- colors ----------
// global
:root {
    // grayscale palette
    --color-white: #fff;
    --color-gray1: #f8f9fa;
    --color-gray2: #e9ecef;
    --color-gray3: #dee2e6;
    --color-gray4: #ced4da;
    --color-gray5: #adb5bd;
    --color-gray6: #575e64;
    --color-gray7: #495057;
    --color-gray8: #343a40;
    --color-gray9: #212529;
    --color-black: #000;
    --color-success: #27ae60;
    --color-error: #e74c3c;
}

// light-mode
[data-theme='light'] {
    // primary
    --color-primary: #6b8f9e;
    --color-primary-light: #a0b0b8;
    --color-primary-dark: #5a6a70;
    --color-primary-darker: #3d505c;

    // accent
    --color-accent: var(--color-gray4);
    --color-accent-light: var(--color-gray3);
    --color-accent-dark: var(--color-gray5);

    // background
    --color-bg-primary: var(--color-gray3);
    --color-bg-secondary: var(--color-primary);

    // text
    --color-text-primary: var(--color-gray8);
    --color-text-secondary: var(--color-gray6);
    --color-text-muted: var(--color-gray5);
}

// dark-mode
[data-theme='dark'] {
    // primary
    --color-primary: #6b8f9e;
    --color-primary-light: #b2cfd7;
    --color-primary-dark: #5a6a70;
    --color-primary-darker: var(--color-gray4);

    // accent
    --color-accent: var(--color-gray5);
    --color-accent-light: var(--color-gray4);
    --color-accent-dark: var(--color-gray6);

    // background
    --color-bg-primary: var(--color-gray9);
    --color-bg-secondary: var(--color-gray8);

    // text
    --color-text-primary: var(--color-gray4);
    --color-text-secondary: var(--color-gray5);
    --color-text-muted: var(--color-gray7);
}

$color-white: var(--color-white);
$color-gray1: var(--color-gray1);
$color-gray2: var(--color-gray2);
$color-gray3: var(--color-gray3);
$color-gray4: var(--color-gray4);
$color-gray5: var(--color-gray5);
$color-gray6: var(--color-gray6);
$color-gray7: var(--color-gray7);
$color-gray8: var(--color-gray8);
$color-gray9: var(--color-gray9);
$color-black: var(--color-black);
$color-success: var(--color-success);
$color-error: var(--color-error);
$color-primary: var(--color-primary);
$color-primary-light: var(--color-primary-light);
$color-primary-dark: var(--color-primary-dark);
$color-primary-darker: var(--color-primary-darker);
$color-accent: var(--color-accent);
$color-accent-light: var(--color-accent-light);
$color-accent-dark: var(--color-accent-dark);
$color-bg-primary: var(--color-bg-primary);
$color-bg-secondary: var(--color-bg-secondary);
$color-text-primary: var(--color-text-primary);
$color-text-secondary: var(--color-text-secondary);
$color-text-muted: var(--color-text-muted);

// Sizing/Spacers
$size-1: 0.25em;
$size-2: 0.5em;
$size-3: 0.75em;
$size-4: 1em;
$size-5: 1.25em;
$size-6: 1.5em;
$size-7: 1.75em;
$size-8: 2em;
$size-9: 2.5em;
$size-10: 3em;
$size-11: 3.5em;
$size-12: 4em;
$size-13: 4.5em;
$size-14: 5em;
$size-15: 5.5em;
$size-16: 6em;
$size-17: 6.5em;
$size-18: 7em;
$size-19: 7.5em;
$size-20: 8em;

